test/fails/bad_tags/compose3.lgl
void main() {
    tag a is vec2;
    tag b is vec2;

    a->b a_b = [[1., 1.], [1., 1.]];
    b->a b_a = [[1., 1.], [1., 1.]];
    vec2->a bad = a_b * b_a; // Illegal downcast
}